--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/blade254353074/Typofix#readme",
   "dependencies": {
+    "fs-extra": "^1.0.0",
     "github": "^6.0.1",
     "node-scrapy": "^0.3.0"
   }
